--- a/app/styles/window.css
+++ b/app/styles/window.css
@@ -66,7 +66,7 @@
 
 /* Assign last children to use full height of window content */
 .window-content div:last-child {
-  height: 100%;
+  /* height: 100%; */
 }
 
 .window-titlebar {
